--- a/todo-scaner.cabal
+++ b/todo-scaner.cabal
@@ -68,7 +68,7 @@ executable todo-scaner
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base >=4.17.2.0 && < 4.19, directory ^>=1.3.8.1, filepath ^>=1.4.100.4, template-haskell >=2.19.0.0 && <=2.20.0.0, optparse-applicative ^>=0.18.1.0, binary ^>=0.8.9.1
+    build-depends:    base >=4.17.2.0 && <= 4.19.0.0, directory ^>=1.3.8.1, filepath ^>=1.4.100.4, template-haskell >=2.19.0.0 && <=2.21.0.0, optparse-applicative ^>=0.18.1.0, binary ^>=0.8.9.1
 
     -- Directories containing source files.
     hs-source-dirs:   app
